# sdev

./: Cargo.toml  LICENSE  README.md  build.rs
src/: cmd.rs  config.rs  dep.rs  main.rs  repo.rs  repositories.rs  shell.rs  tui.rs  ui.rs
src/cmd/: clone.rs  mod.rs  open.rs  tmux.rs  z.rs
src/cmd/tmux/: ui.rs
src/dep/: clone.rs  git.rs  tmux.rs
src/shell/: tmux.rs
src/ui/: picker.rs  ratinit.rs
