[package]
name = "sdev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bstr = "1"
crossterm = "0.27.0"
home = "0.5.9"
jwalk = "0.8.1"
opener = "0.7.1"
nucleo = "0.5"
ratatui = "0.27.0"
thiserror = "1"

[dependencies.clap]
version = "4"
default-features = false
features = ["std", "derive", "error-context", "help", "usage"]

[dependencies.gix]
version = "0"
default-features = false
features = ["blocking-network-client", "max-performance-safe", "worktree-mutation"]

[dependencies.gix-features]
version = "0"
default-features = false
features = ["fs-walkdir-parallel"]
