[package]
name = "sdev"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bstr = "1"
home = "0.5.9"
idna_adapter = "~1.0.0"
jwalk = "0.8.1"
opener = "0"
nucleo = "0.5"
ratatui = "0.29.0"
thiserror = "2"

[dependencies.clap]
version = "4"
default-features = false
features = ["std", "derive", "error-context", "help", "usage"]

[dependencies.gix]
version = "0"
default-features = false
features = ["blocking-http-transport-reqwest-rust-tls", "max-performance-safe", "worktree-mutation"]

[dependencies.gix-features]
version = "0"
default-features = false
features = ["fs-walkdir-parallel"]
