[package]
name = "sdev"
version = "0.1.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bstr = "1"
idna_adapter = "~1.0.0"
opener = "0"
nucleo = "0.5"
ratatui-core = "0.1.0"
ratatui-crossterm = "0.1.0"
ratatui-widgets = "0.3.0"
thiserror = "2"
walkdir = "2"

[dependencies.clap]
version = "4"
default-features = false
features = ["std", "derive", "error-context", "help", "usage"]

[dependencies.gix]
version = "0"
default-features = false
features = [
  "blocking-http-transport-reqwest-rust-tls",
  "max-performance",
  "sha1",
  "worktree-mutation"
]

[build-dependencies.gix]
version = "0"
default-features = false
features = [
  "sha1",
]
